# dcw

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  install.sh  mise.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: release.yml
docker/forwarder/: Dockerfile
src/: browser.rs  config.rs  docker.rs  forward_ports.rs  main.rs  process.rs  settings.rs  workspace.rs
src/commands/: browser_relay.rs  down.rs  exec.rs  mod.rs  port.rs  up.rs  update.rs  watch.rs
