[package]
name = "dcw"
version = "0.5.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
jsonc-parser = { version = "0.29", features = ["serde"] }
libc = "0.2"
tiny_http = "0.12"
toml = "0.8"
dirs = "6"
